--- a/UVJCompsiteClassification.ipynb
+++ b/UVJCompsiteClassification.ipynb
@@ -1345,7 +1345,7 @@
     "    ax.set_ylim([0, 2.5])\n",
     "    ax.set_ylabel('U - V')\n",
     "    ax.set_xlabel('V - J')\n",
-    "    ax.set_title(\"How AGN Contribution may Effect the UVJ Space of Galaxies\")\n",
+    "    ax.set_title(\"The Effect of AGN Contribution on the Rest Frame UVJ Diagram\")\n",
     "    \n",
     "    #ax.plot(df[f'VJ_{int(alpha*100)}'], df[f'UV_{int(alpha*100)}'], 'r.', label=f'AGN Contribution {int(alpha*100)}%')\n",
     "    \n",
