ZFourge SED Composite and UVJ Colour Calculation Script partiall implemented
A script was created that serves to create ZFOURGE composites, this script along with the restframe code was created to be generalizeable to the UDS, COSMOS and CDFS fields and should allow the exportation of the ID's of galaxies, in addition to this eventually a CSV will be exportable which will be able to be read and combined with a catalogue dataframe

--- a/ZFourgeUVJInvestigation.ipynb
+++ b/ZFourgeUVJInvestigation.ipynb
@@ -97,9 +97,9 @@
    "outputs": [],
    "source": [
     "zfourge_path = 'datasets/zfourge/'\n",
-    "\n",
+    "field = \"CDFS\"\n",
     "# As we are only working with the ZFOURGE Survey, we will only read in the CDFS data\n",
-    "df = read_zfourge_data('CDFS', zfourge_path)"
+    "df = read_zfourge_data(field, zfourge_path)"
    ]
   },
   {
@@ -283,7 +283,7 @@
     "\n",
     "    plt.xlabel('Restframe V-J [Mag]')\n",
     "    plt.ylabel('Restframe U-V [Mag]')\n",
-    "    plt.title('UVJ Diagram for the CDFS field')\n",
+    "    plt.title('UVJ Diagram for the '+field+' field')\n",
     "    plt.legend()\n",
     "    plt.show()\n",
     "    return df"
@@ -475,7 +475,7 @@
     "\n",
     "\n",
     "# save the selection to a csv file\n",
-    "save_csv_with_numbered_name(selected_uvj_df_ids, 'datasets/zfourge/GalaxySelectionOutputs', 'full_cdfs_ids.csv')"
+    "save_csv_with_numbered_name(selected_uvj_df_ids, 'datasets/zfourge/GalaxySelectionOutputs', 'full_'+field+'_ids.csv')"
    ]
   },
   {
@@ -515,7 +515,7 @@
     "                , color='g', label='Dusty')\n",
     "plt.xlabel('Log Mass')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Mass Distribution for the CDFS field')\n",
+    "plt.title('Mass Distribution for the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n"
@@ -580,7 +580,7 @@
     "                , color='g', label='Dusty')\n",
     "plt.xlabel('Log Mass')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Mean Sample Distribution for the CDFS field n_runs = '+str(num_trials)+ ', n_samples = ' + str(sample_size))\n",
+    "plt.title('Mean Sample Distribution for the CDFS '+ field +' n_runs = '+str(num_trials)+ ', n_samples = ' + str(sample_size))\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -670,7 +670,7 @@
     "                , color='r', label='Quiescent')\n",
     "plt.xlabel('Log Mass')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Mass Distribution for the CDFS field')\n",
+    "plt.title('Mass Distribution for the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -708,7 +708,7 @@
     "                , color='r', label='Quiescent')\n",
     "plt.xlabel('Redshift')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Redshift Distribution for the Quiescent Galaxies in the CDFS field')\n",
+    "plt.title('Redshift Distribution for the Quiescent Galaxies in the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n"
@@ -737,7 +737,7 @@
     "                , color='b', label='Star Forming')\n",
     "plt.xlabel('Log Mass')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Mass Distribution for the CDFS field')\n",
+    "plt.title('Mass Distribution for the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -769,7 +769,7 @@
     "                , color='g', label='Dusty')\n",
     "plt.xlabel('Log Mass')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Mass Distribution for the CDFS field')\n",
+    "plt.title('Mass Distribution for the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -3125,7 +3125,7 @@
     "\n",
     "plt.xlabel('Log Mass')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Mass Distribution for the Selected Galaxies in the CDFS field')\n",
+    "plt.title('Mass Distribution for the Selected Galaxies in the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n"
    ]
@@ -3160,7 +3160,7 @@
     "\n",
     "plt.xlim([-11, -8])\n",
     "\n",
-    "plt.title('Star Forming Rate Distribution for the Selected Galaxies in the CDFS field')\n",
+    "plt.title('Star Forming Rate Distribution for the Selected Galaxies in the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -3194,7 +3194,7 @@
     "                , color='g', label='Dusty')\n",
     "plt.xlabel('Redshift')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Redshift Distribution for the Selected Galaxies in the CDFS field')\n",
+    "plt.title('Redshift Distribution for the Selected Galaxies in the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n"
    ]
@@ -3226,7 +3226,7 @@
     "                , color='g', label='Dusty')\n",
     "plt.xlabel('V - J')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('V - J Distribution for the Selected Galaxies in the CDFS field')\n",
+    "plt.title('V - J Distribution for the Selected Galaxies in the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n"
    ]
@@ -3258,7 +3258,7 @@
     "                , color='g', label='Dusty')\n",
     "plt.xlabel('U - V')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('U - V Distribution for the Selected Galaxies in the CDFS field')\n",
+    "plt.title('U - V Distribution for the Selected Galaxies in the '+ field +' field')\n",
     "plt.legend()\n",
     "plt.show()\n"
    ]
@@ -3294,7 +3294,7 @@
     "    print(f\"CSV file saved as {file_name}.csv\")\n",
     "\n",
     "# We can also save this data to a csv file for later use\n",
-    "save_csv_with_numbered_name(selected_df, 'datasets/zfourge/GalaxySelectionOutputs', 'selected_uvj_data')\n",
+    "save_csv_with_numbered_name(selected_df, 'datasets/zfourge/GalaxySelectionOutputs', ''+ field +'_selected_uvj_data')\n",
     "\n",
     "# Also saving the parameters used to generate the data\n",
     "num_galaxies = num_galaxies_per_reigon\n",
@@ -3344,7 +3344,7 @@
     "}\n",
     "\n",
     "# Save all parameters to a single text file with numbered name\n",
-    "save_all_params_with_numbered_name(all_params, 'datasets/zfourge/GalaxySelectionOutputs', 'selected_uvj_data_parameters')"
+    "save_all_params_with_numbered_name(all_params, 'datasets/zfourge/GalaxySelectionOutputs', ''+ field +'_selected_uvj_data_parameters')"
    ]
   },
   {
@@ -3400,7 +3400,7 @@
     "\n",
     "\n",
     "# save the selection to a csv file\n",
-    "save_csv_with_numbered_name(selected_uvj_df_ids, 'datasets/zfourge/GalaxySelectionOutputs', 'selected_uvj_data_ids')\n"
+    "save_csv_with_numbered_name(selected_uvj_df_ids, 'datasets/zfourge/GalaxySelectionOutputs', ''+ field +'_selected_uvj_data_ids')\n"
    ]
   },
   {
@@ -3434,7 +3434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
