Updated the Extraction code to get SEDs, to allow for UDS and COSMOS field SEDs to be extracted
Added the ability to use the UDS and COSMOS field to extract their SEDs. This will allow the entire dataset to be explored in some detail at some point. The next step is that the SED processing code needs to be updated to match, allowing the names to accurately represent the new SED name

--- a/SedProcessing_ZFOURGETest.ipynb
+++ b/SedProcessing_ZFOURGETest.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +63,7 @@
     }
    ],
    "source": [
+    "\n",
     "\n",
     "# We are attempting to read in a new set of SEDs that have been generated using a variation of Michael's ZFOURGE SED processing code.\n",
     "# the SEDs are in the form of csvs, this can be explored in the zfourge/seds\n",
@@ -91,6 +92,7 @@
     "        # get rid of units in the filename\n",
     "        objname = file.split('_units')[0]\n",
     "        objname = objname.split('_')[1]\n",
+    "        \n",
     "        if objname == name:\n",
     "            filepath = os.path.join(folder_path, file)\n",
     "            df = pd.read_csv(filepath)\n",
@@ -1304,7 +1306,11 @@
     "# specifically should be the same for each element\n",
     "\n",
     "# There shouldn't be any bad ideas\n",
-    "ids = new_objname_alpha_list[0]"
+    "ids = new_objname_alpha_list[0]\n",
+    "\n",
+    "\n",
+    "# add the field prefix to the IDs\n",
+    "ids = [field + '_' + str(x) for x in ids]"
    ]
   },
   {
