updated processing code to read in the general files as required

--- a/SedProcessing_ZFOURGETest.ipynb
+++ b/SedProcessing_ZFOURGETest.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import astropy.units as u\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not including object:  5880\n"
+      "Found object:  COSMOS_1\n"
      ]
     }
    ],
@@ -90,10 +81,12 @@
     "        # Find filepath and convert to df\n",
     "        \n",
     "        # get rid of units in the filename\n",
-    "        objname = file.split('_units')[0]\n",
-    "        objname = objname.split('_')[1]\n",
+    "        objname = file.split('SED_')[1]\n",
+    "        \n",
+    "        objname = objname.split('.csv')[0]\n",
     "        \n",
     "        if objname == name:\n",
+    "            print(\"Found object: \", objname)\n",
     "            filepath = os.path.join(folder_path, file)\n",
     "            df = pd.read_csv(filepath)\n",
     "            \n",
@@ -109,18 +102,134 @@
     "            df.iloc[:, 0] = df.iloc[:, 0] \n",
     "            # Name each of the columns appropriately\n",
     "            df.columns = ['lambda (Angstroms)', 'Total Flux (erg/s/cm^2/Angstrom)']\n",
-    "            print(objname)\n",
     "            return df, objname\n",
     "        \n",
     "    \n",
     "    return None, None\n",
     "\n",
-    "df, objname = read_zfourge_template(zfourge_folderpath, '5880')"
+    "df, objname = read_zfourge_template(zfourge_folderpath, 'COSMOS_1') # Test function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lambda (Angstroms)</th>\n",
+       "      <th>Total Flux (erg/s/cm^2/Angstrom)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.569400e+01</td>\n",
+       "      <td>1.674183e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.851908e+01</td>\n",
+       "      <td>1.664295e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9.040247e+01</td>\n",
+       "      <td>1.704811e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9.228585e+01</td>\n",
+       "      <td>1.730499e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.416923e+01</td>\n",
+       "      <td>1.756299e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2813</th>\n",
+       "      <td>7.533539e+05</td>\n",
+       "      <td>1.920251e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2814</th>\n",
+       "      <td>9.416923e+05</td>\n",
+       "      <td>1.189500e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2815</th>\n",
+       "      <td>1.130031e+06</td>\n",
+       "      <td>8.266649e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2816</th>\n",
+       "      <td>1.318369e+06</td>\n",
+       "      <td>6.107660e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2817</th>\n",
+       "      <td>1.506708e+06</td>\n",
+       "      <td>4.705329e-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2818 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      lambda (Angstroms)  Total Flux (erg/s/cm^2/Angstrom)\n",
+       "0           8.569400e+01                      1.674183e-02\n",
+       "1           8.851908e+01                      1.664295e-02\n",
+       "2           9.040247e+01                      1.704811e-02\n",
+       "3           9.228585e+01                      1.730499e-02\n",
+       "4           9.416923e+01                      1.756299e-02\n",
+       "...                  ...                               ...\n",
+       "2813        7.533539e+05                      1.920251e-06\n",
+       "2814        9.416923e+05                      1.189500e-06\n",
+       "2815        1.130031e+06                      8.266649e-07\n",
+       "2816        1.318369e+06                      6.107660e-07\n",
+       "2817        1.506708e+06                      4.705329e-07\n",
+       "\n",
+       "[2818 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,8 +253,8 @@
     "    for file in files_in_folder:\n",
     "\n",
     "        # Find filepath and convert to df\n",
-    "        objname = file.split('_units')[0]\n",
-    "        objname = objname.split('_')[1]\n",
+    "        objname = file.split('SED_')[1]\n",
+    "        objname = objname.split('.csv')[0]\n",
     "        filepath = os.path.join(folder_path, file)\n",
     "        df = pd.read_csv(filepath)\n",
     "        \n",
