--- a/Eazy Template Extractions/eazy_zf-cdfs_template_extractions_restframed.ipynb
+++ b/Eazy Template Extractions/eazy_zf-cdfs_template_extractions_restframed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "1ccd8eef86b8981e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "\n",
     "# We can generalise this the required field in ZFOURGE - Cosmos, CDFS, UDS \n",
     "# we need to begin by specififying the field to get the required data\n",
-    "field = 'CDFS'\n",
+    "field = 'COSMOS'\n",
     "\n",
     "translate_file = {'CDFS': 'cdfs.v1.6.11.translate', 'COSMOS': 'cosmos.v1.3.6.translate', 'UDS': 'uds.v1.5.8.translate'}\n",
     "param_file = {'CDFS': 'cdfs.v1.6.1.zphot.param', 'COSMOS': 'cosmos.v1.3.6.zphot.param', 'UDS': 'uds.v1.5.8.zphot.param'}\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "aae57fdac2bf4b89",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:59<00:00,  6.61s/it]\n"
+      "100%|██████████| 9/9 [02:36<00:00, 17.37s/it] \n"
      ]
     },
     {
@@ -109,14 +109,14 @@
       "Template   6: eazy_v1.1_sed7.dat (NZ=1).\n",
       "Template   7: c09_del_8.6_z_0.019_chab_age09.40_av2.0.dat (NZ=1).\n",
       "Template   8: erb2010_highEW.dat (NZ=1).\n",
-      "Process templates: 59.887 s\n"
+      "Process templates: 156.736 s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "479it [00:06, 74.96it/s]\n"
+      "479it [00:10, 47.31it/s]\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "b41f1aad",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "8f819d60",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=20786</i>\n",
-       "<table id=\"table2599928904192\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table1613205007328\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>id</th><th>ra</th><th>dec</th><th>z_spec</th><th>f_IRAC_80</th><th>e_IRAC_80</th><th>f_IRAC_58</th><th>e_IRAC_58</th><th>f_IRAC_45</th><th>e_IRAC_45</th><th>f_IRAC_36</th><th>e_IRAC_36</th><th>f_Ks</th><th>e_Ks</th><th>f_J1</th><th>e_J1</th><th>f_J2</th><th>e_J2</th><th>f_J3</th><th>e_J3</th><th>f_Hs</th><th>e_Hs</th><th>f_Hl</th><th>e_Hl</th><th>f_Zp</th><th>e_Zp</th><th>f_Z</th><th>e_Z</th><th>f_I</th><th>e_I</th><th>f_Rp</th><th>e_Rp</th><th>f_R</th><th>e_R</th><th>f_G</th><th>e_G</th><th>f_V</th><th>e_V</th><th>f_B</th><th>e_B</th><th>f_U</th><th>e_U</th><th>f_IA427</th><th>e_IA427</th><th>f_IA484</th><th>e_IA484</th><th>f_IA505</th><th>e_IA505</th><th>f_IA527</th><th>e_IA527</th><th>f_IA624</th><th>e_IA624</th><th>f_IA709</th><th>e_IA709</th><th>f_IA738</th><th>e_IA738</th><th>f_F125W</th><th>e_F125W</th><th>f_F160W</th><th>e_F160W</th><th>f_F140W</th><th>e_F140W</th><th>f_F606W</th><th>e_F606W</th><th>f_F814W</th><th>e_F814W</th><th>f_UVISTA_J</th><th>e_UVISTA_J</th><th>f_UVISTA_H</th><th>e_UVISTA_H</th><th>f_UVISTA_Ks</th><th>e_UVISTA_Ks</th><th>f_UVISTA_Y</th><th>e_UVISTA_Y</th><th>f_Ksall</th><th>e_Ksall</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
        "<tr><td>1</td><td>150.128601</td><td>2.174722</td><td>-99.00000</td><td>-15.862</td><td>11.253</td><td>-19.866</td><td>9.123</td><td>9.504</td><td>0.293</td><td>9.048</td><td>0.253</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>0.711</td><td>0.147</td><td>0.992</td><td>0.120</td><td>0.666</td><td>0.042</td><td>0.582</td><td>0.040</td><td>0.619</td><td>0.037</td><td>0.481</td><td>0.035</td><td>0.520</td><td>0.044</td><td>0.407</td><td>0.025</td><td>0.281</td><td>0.052</td><td>0.450</td><td>0.098</td><td>0.551</td><td>0.086</td><td>0.503</td><td>0.102</td><td>0.462</td><td>0.082</td><td>0.497</td><td>0.086</td><td>0.502</td><td>0.107</td><td>0.636</td><td>0.125</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>-99.000</td><td>0.499</td><td>0.066</td><td>-99.000</td><td>-99.000</td><td>1.240</td><td>0.171</td><td>2.032</td><td>0.250</td><td>2.174</td><td>0.227</td><td>1.118</td><td>0.116</td><td>0.748</td><td>171697.000</td></tr>\n",
@@ -215,7 +215,7 @@
        "20786 150.050873 2.370159 -99.00000 ...      0.494      0.106   0.907 153461.609"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "3d436b95928128f1",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "afb0d719",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "a93ffc29",
    "metadata": {},
    "outputs": [],
@@ -267,17 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "8b8af534",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "7706"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "5a58b14ededc362f",
    "metadata": {},
    "outputs": [],
