minor changes to code for lily

--- a/HowToCreateCompositeSEDs.ipynb
+++ b/HowToCreateCompositeSEDs.ipynb
@@ -48,12 +48,12 @@
     "skirtor_folderpath = os.path.join('datasets', 'Templates', 'Skirtor')\n",
     "\n",
     "# Dictionary to store the names of the models, using the values of the parameters- AGN type1 params\n",
-    "optical_depth = 3\n",
-    "p = 0\n",
-    "q = 0\n",
-    "opening_angle = 50\n",
-    "radius_ratio = 20\n",
-    "inclination = 0\n",
+    "optical_depth = 3 # fixed\n",
+    "p = 0 # fixed\n",
+    "q = 0 # fixed\n",
+    "opening_angle = 50 # fixed\n",
+    "radius_ratio = 20 # fixed \n",
+    "inclination = 0 # you can adjust this between a value of 0 and 90 (in steps of 10 as per the files available)\n",
     "\n",
     "\n",
     "# read in the Skirtor model of the AGN\n",
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df =agn_df.copy()"
+    "df =agn_df.copy() # set the df to the AGN model"
    ]
   },
   {
