added some major improvements to the cigale UVJ exploration code

--- a/SedProcessing_DecomposedZFourgeSEDs.ipynb
+++ b/SedProcessing_DecomposedZFourgeSEDs.ipynb
@@ -711,21 +711,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now doing this lets select 5 galaxies, and plot their SEDS\n",
     "\n",
-    "# We will use the same code as above, but we will put it in a function, and then call this function for each of the galaxies\n",
-    "# that we have selected\n",
-    "\n",
-    "def get_n_seds(n, restframe=False, all=False):\n",
+    "def get_n_seds(df, n, restframe=False, all=False):\n",
     "    # Select n galaxies\n",
     "    \n",
     "    df_list = []\n",
     "    names = []\n",
     "    redshifts = []\n",
     "    if all==False:\n",
-    "        selected_galaxies = queiscent_transitions.sample(n)\n",
+    "        selected_galaxies = df.sample(n)\n",
     "    else: \n",
-    "        selected_galaxies = queiscent_transitions\n",
+    "        selected_galaxies = df\n",
     "        \n",
     "    # Reset the index\n",
     "    selected_galaxies = selected_galaxies.reset_index(drop=True)\n",
@@ -48947,7 +48943,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Another thing we could do is given our selection of AGN-less galaxies, we could put these SEDs back through my code, adding the AGN component back in to see if we can recreate at what point is the AGN component matching the observed SEDs\n",
+    "# At this point, this should tell us our AGN fraction (alpha value)\n",
+    "\n",
+    "# So we have a selection of galaxies that don't contain any AGN. \n",
+    "# So for each of the generated SEDs. Take that SED, an export it to a CSV file. so we can use our previous method of AGN addition \n",
+    "# to put the AGN back in, and to try to infer the alpha value\n",
+    "\n",
+    "\n",
+    "\n",
+    "# We only need the subset of ID's\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
