--- a/UVJ_TemplateClassification.ipynb
+++ b/UVJ_TemplateClassification.ipynb
@@ -24,7 +24,7 @@
     "import os\n",
     "from astLib import astSED\n",
     "import astropy.io.fits as fits\n",
-    "from carf import * # custom module for functions relating to the project\n",
+    "#from carf import * # custom module for functions relating to the project\n",
     "import matplotlib.path as mpath"
    ]
   },
@@ -55,6 +55,48 @@
     "pb_U = astSED.Passband(pb_U_path, normalise=False)\n",
     "pb_V = astSED.Passband(pb_V_path, normalise=False)\n",
     "pb_J = astSED.Passband(pb_J_path, normalise=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_brown_galaxy_templates(folder_path):\n",
+    "    \"\"\"_summary_\n",
+    "\n",
+    "        Args:\n",
+    "            folder_path (string): path to the folder where the SED templates are located\n",
+    "    \n",
+    "        Returns:\n",
+    "            df_list: Returns a list of dataframes containing the SED templates\n",
+    "            objname_list: Returns a list of the names of the objects\n",
+    "    \"\"\"\n",
+    "    df_list = []\n",
+    "    objname_list = []\n",
+    "    folder_path = os.path.join(folder_path)\n",
+    "    files_in_folder = os.listdir(folder_path)\n",
+    "    for file in files_in_folder:\n",
+    "\n",
+    "        # Find filepath and convert to df\n",
+    "        objname = file.split('_restframe.dat')[0]\n",
+    "        filepath = os.path.join(folder_path, file)\n",
+    "        data = np.loadtxt(filepath)\n",
+    "        df = pd.DataFrame(data)\n",
+    "            \n",
+    "        # our wavelength is in microns, convert to Angstroms\n",
+    "        df[0] = df[0] * 10000 # microns 10^-6 -> Angstroms 10^-10 \n",
+    "        \n",
+    "        # Name each of the columns appropriately\n",
+    "        df.columns = ['lambda (Angstroms)', 'Luminosity (W/Hz)' , 'Total Flux (erg/s/cm^2/Angstrom)', 'Source']\n",
+    "            \n",
+    "        # Append the dataframe to the list    \n",
+    "        df_list.append(df)\n",
+    "        objname_list.append(objname)\n",
+    "        \n",
+    "        \n",
+    "    return (df_list, objname_list)"
    ]
   },
   {
