slight updates, extra code plus nbody code

--- a/RecreatingDecomposedSEDs.ipynb
+++ b/RecreatingDecomposedSEDs.ipynb
@@ -5349,7 +5349,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "# Now, based on where the inital AGN uvj value is, and where the recaluclated one is at alpha = 0. draw an arrow \n",
+    "# to show the direction of the change\n",
+    "\n"
    ]
   }
  ],
