--- a/ZFourgeUVJInvestigation.ipynb
+++ b/ZFourgeUVJInvestigation.ipynb
@@ -190,7 +190,7 @@
     "    y = df['mag_U'] - df['mag_V'] # UV Colours\n",
     "\n",
     "    # Plot the UVJ diagram\n",
-    "    plt.figure(figsize=(10, 10))\n",
+    "    plt.figure(figsize=(7, 5))\n",
     "\n",
     "    xmax = 2.5\n",
     "    ymax = 2.5\n",
@@ -285,6 +285,7 @@
     "    plt.ylabel('Restframe U-V [Mag]')\n",
     "    plt.title('UVJ Diagram for the '+field+' field')\n",
     "    plt.legend()\n",
+    "    plt.savefig('uvj_diagram.png')\n",
     "    plt.show()\n",
     "    return df"
    ]
