Added file for analysis of data

--- a/ColourAnalysis_DecomposedSEDs_Full.ipynb
+++ b/ColourAnalysis_DecomposedSEDs_Full.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,36 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2419a982cd0>"
+       "<seaborn.axisgrid.PairGrid at 0x265d8236e50>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Quickly create a pairplot to se the relationships between the colours, from fully decomposed to the original galaxy colours\n",
-    "sns.pairplot(decomposed_colours)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average VJ Full: 0.5803520648009484Average UV Full: 0.8537970203978104Average VJ Galaxy: 0.5726139410875686Average UV Galaxy: 0.8803874995939499\n"
-     ]
     },
     {
      "data": {
@@ -108,6 +90,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Quickly create a pairplot to se the relationships between the colours, from fully decomposed to the original galaxy colours\n",
+    "sns.pairplot(decomposed_colours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average VJ Full: 0.5803520648009484Average UV Full: 0.8537970203978104Average VJ Galaxy: 0.5726139410875686Average UV Galaxy: 0.8803874995939499\n"
+     ]
     },
     {
      "data": {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "[22275 rows x 6 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
        "[22275 rows x 247 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,12 +1235,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now that we gave a dataframe containing enough of the information that we are concerend with we should be able to generate some insights\n"
+    "# Now that we gave a dataframe containing enough of the information that we are concerend with we should be able to generate some insights\n",
+    "# This is a useful dataframe. We should choose to export this so way may look through the data and analyze it\n",
+    "\n",
+    "master_df.to_csv('datasets/full_zfourge_decomposed/zfourge_full.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
